@@ -629,6 +629,8 @@ public class TestTaskImpl {
     mockTask.handle(new TaskEventTermination(taskId, TaskTerminationCause.DAG_KILL));
     assertEquals(1, mockTask.getDiagnostics().size());
     assertTrue(mockTask.getDiagnostics().get(0).contains(TaskTerminationCause.DAG_KILL.name()));
+    assertEquals(0, mockTask.taskStartedEventLogged);
+    assertEquals(1, mockTask.taskFinishedEventLogged);
   }
   
   @Test
@@ -668,6 +670,9 @@ public class TestTaskImpl {
 
   @SuppressWarnings("rawtypes")
   private class MockTaskImpl extends TaskImpl {
+
+    public int taskStartedEventLogged = 0;
+    public int taskFinishedEventLogged = 0;
 
     private List<MockTaskAttemptImpl> taskAttempts = new LinkedList<MockTaskAttemptImpl>();
     private Vertex vertex;
@@ -716,12 +721,15 @@ public class TestTaskImpl {
     }
 
     protected void logJobHistoryTaskStartedEvent() {
+      taskStartedEventLogged++;
     }
 
     protected void logJobHistoryTaskFinishedEvent() {
+      taskFinishedEventLogged++;
     }
 
     protected void logJobHistoryTaskFailedEvent(TaskState finalState) {
+      taskFinishedEventLogged++;
     }
   }
 
